--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -21,7 +21,7 @@
     </header>
 
     <nav class="navegacion">
-        <a class="navegacion__enlace navegacion_enlace--activo" href="index.ejs">Tienda</a>
+        <a class="navegacion__enlace navegacion_enlace--activo" href="index.html">Tienda</a>
         <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
     </nav>
 
